deploy: 79492eed3a4ce024f9a2aaa2940762e5702bbcfb

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 <meta name=color-scheme content="light dark"><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://visualcomputing.github.io/vc/404.html">
+<meta property="og:url" content="https://vc-project.github.io/vc/404.html">
 <title>404 Page not found | Visual Computing</title>
 <link rel=manifest href=/vc/manifest.json>
 <link rel=icon href=/vc/favicon.png type=image/x-icon>
