--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=en dir=ltr>
 <head>
-<meta name=generator content="Hugo 0.88.1">
+<meta name=generator content="Hugo 0.89.0">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=description content="Visual Computing Template #  Welcome to the UN / DISI visual computing course template site.
@@ -11,14 +11,14 @@ Methodology #  Active-learning using free-software to develop:
 <meta name=color-scheme content="light dark"><meta property="og:title" content="Introduction">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://visualcomputing.github.io/vc/">
+<meta property="og:url" content="https://vc-project.github.io/vc/">
 <title>Introduction | Visual Computing</title>
 <link rel=manifest href=/vc/manifest.json>
 <link rel=icon href=/vc/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/vc/book.min.89a77f7e702a8626749b948bbfb01109823daf6c1246ca407d1378833494c402.css integrity="sha256-iad/fnAqhiZ0m5SLv7ARCYI9r2wSRspAfRN4gzSUxAI=" crossorigin=anonymous>
 <script defer src=/vc/flexsearch.min.js></script>
 <script defer src=/vc/en.search.min.cd06d6f8c08ff5ee2dddc023e0f527708f4e0ba7b9f75a2e1b4bc17bde515bef.js integrity="sha256-zQbW+MCP9e4t3cAj4PUncI9OC6e591ouG0vBe95RW+8=" crossorigin=anonymous></script>
-<link rel=alternate type=application/rss+xml href=https://visualcomputing.github.io/vc/index.xml title="Visual Computing">
+<link rel=alternate type=application/rss+xml href=https://vc-project.github.io/vc/index.xml title="Visual Computing">
 </head>
 <body dir=ltr>
 <input type=checkbox class="hidden toggle" id=menu-control>
@@ -41,42 +41,42 @@ Methodology #  Active-learning using free-software to develop:
 <span>Shortcodes</span>
 <ul>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/buttons/>Buttons</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/buttons/>Buttons</a>
 </li>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/columns/>Columns</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/columns/>Columns</a>
 </li>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/details/>Details</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/details/>Details</a>
 </li>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/expand/>Expand</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/expand/>Expand</a>
 </li>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/hints/>Hints</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/hints/>Hints</a>
 </li>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/katex/>Katex</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/katex/>Katex</a>
 </li>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/mermaid/>Mermaid</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/mermaid/>Mermaid</a>
 </li>
 <li>
 <input type=checkbox id=section-ec67a64aba70b9df3d2a9acd6c92e3bc class=toggle>
 <label for=section-ec67a64aba70b9df3d2a9acd6c92e3bc class="flex justify-between">
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/p5/>P5</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/p5/>P5</a>
 </label>
 <ul>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/p5/div/>Div</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/p5/div/>Div</a>
 </li>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/p5/iframe/>Iframe</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/p5/iframe/>Iframe</a>
 </li>
 </ul>
 </li>
 <li>
-<a href=https://visualcomputing.github.io/vc/docs/shortcodes/tabs/>Tabs</a>
+<a href=https://vc-project.github.io/vc/docs/shortcodes/tabs/>Tabs</a>
 </li>
 </ul>
 </li>
@@ -234,7 +234,7 @@ If you changed the repo named don&rsquo;t forget to update all the js related (b
 </article>
 <footer class=book-footer>
 <div class="flex flex-wrap justify-between">
-<div><a class="flex align-center" href=https://github.com/visualcomputing/vc/commit/5ce660f33c1412b01badab5afdf34012af6b3ca1 title="Last modified by nakednous | November 2, 2021" target=_blank rel=noopener>
+<div><a class="flex align-center" href=https://github.com/vc-project/vc/commit/5ce660f33c1412b01badab5afdf34012af6b3ca1 title="Last modified by nakednous | November 2, 2021" target=_blank rel=noopener>
 <img src=/vc/svg/calendar.svg class=book-icon alt=Calendar>
 <span>November 2, 2021</span>
 </a>
